fixed: landing page overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,8 +25,11 @@ input:-webkit-autofill:active {
   transition: background-color 999999s ease-in-out 0s;
 }
 
-body{
+html,body{
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  height: 100%;
+  width:100%;
 }
 
